# Analysis-Lib

./: .gitignore  README.md  pyproject.toml
examples/folgen/: 00_main.py  bsp_01_grundlagen_folgen.py  bsp_02_konvergenz_visualisieren.py  bsp_folgen_01.py  bsp_folgen_02.py  bsp_folgen_03.py  bsp_folgen_04.py  bsp_folgen_05.py
examples/funktionen/: bsp_00_Exponentialfunktionen.py  bsp_00_Hyperbolicus.py  bsp_00_doppelte_NS.py  bsp_00_function_convex_concave.py  bsp_00_function_convex_concave_01.py  bsp_00_funktionen_monome.py  bsp_00_funktionen_plot.py  bsp_00_funktionen_plot_beschraenkt.py  bsp_00_funktionen_plot_extrema.py  bsp_00_hebbare_Singularität.py  bsp_00_implicit_plot.py  bsp_00_parametrix_plot.py  bsp_00_plot.py  bsp_01_exponentialfkt.py  bsp_01_hyperbolicfkt.py  bsp_01_potenzfkt.py  bsp_01_quad_fkt.py  bsp_01_sin_cos.py  bsp_02_Grenzwert.py  bsp_02_Grenzwert_einseitig.py  bsp_02_epsilon_delta_criterion.py  bsp_02_tan_cot.py  bsp_03_hyperbolisch.py  bsp_04_exp_potenzen.py
src/analysis_lib/folgen/: __init__.py  folgen.py
src/analysis_lib/funktionen/: __init__.py  funktionen.py
