
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis_lib"
version = "0.1.0"
description = "Python-Bibliothek für Analysis mit sauberer Modulstruktur"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "sympy", "matplotlib"]
